AOE Actions and Objects added.
AOE Damage, AOE Heal, Posion Pool and Trip Mine added.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/UnrealAOEDamage.UnrealAOEDamageGameMode"
+GlobalDefaultGameMode=/Game/_Game/Blueprints/BP_UnrealAOEDamageGameMode.BP_UnrealAOEDamageGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
