--- a/UnrealAOEDamage.uproject
+++ b/UnrealAOEDamage.uproject
@@ -9,7 +9,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"UMGEditor"
+				"UMGEditor",
+				"Engine"
 			]
 		}
 	]
